--- a/package.json
+++ b/package.json
@@ -23,18 +23,17 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.1",
-    "nanoid": "^3.3.4",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
-    "sequelize-cli": "^6.6.0",
-    "uuid": "^9.0.0"
+    "sequelize-cli": "^6.6.0"
   }
 }
