--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A web application to manage funds and records",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index",
-    "start": "node ./index",
+    "dev": "cross-env NODE_ENV=development nodemon ./index",
+    "start": "cross-env NODE_ENV=production node ./index",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
@@ -18,7 +18,8 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
