--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-PORT=0
-DB_USER=''
-DB_PASSWORD=''
-DB_HOST=''
-DB_NAME=''
-DB_PORT=0
-JWT_SECRET=''
+DB_USER
+DB_NAME
+DB_PASSWORD
+DB_HOST
+DB_PORT
+JWT_SECRET
+MAIL_HOST
+MAIL_PORT
+MAIL_USER
+MAIL_PASS
