--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "EdgarParucho",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
