--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "EdgarParucho",
   "license": "ISC",
   "dependencies": {
-    "axios": "1.7.4",
+    "axios": "^1.10.0",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "16.3.1",
-    "express": "4.18.2",
+    "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "1.6.0",
     "joi": "17.9.2",
     "jsonwebtoken": "9.0.0",
