--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
     "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "seed:generate": "sequelize-cli seed:generate --name",
+    "seed:up": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo",
     "vercel-build": "echo hello"
   },
   "author": "EdgarParucho",
