--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./index",
     "start": "cross-env NODE_ENV=production node ./index",
-    "migrations:generate": "sequelize-cli migration:generate --name",
-    "migrations:run": "sequelize-cli db:migrate",
-    "migrations:revert": "sequelize-cli db:migrate:undo",
-    "migrations:delete": "sequelize-cli db:migrate:undo:all",
+    "migrate:generate": "sequelize-cli migration:generate --name",
+    "migrate:up": "sequelize-cli db:migrate --env",
+    "migrate:undo": "sequelize-cli db:migrate:undo --env",
     "seed:generate": "sequelize-cli seed:generate --name",
-    "seed:up": "sequelize-cli db:seed:all",
-    "seed:undo": "sequelize-cli db:seed:undo",
+    "seed:up": "sequelize-cli db:seed:all --env",
+    "seed:undo": "sequelize-cli db:seed:undo --env",
     "vercel-build": "echo hello"
   },
   "author": "EdgarParucho",
